benchmarks/MACO_20252/02_223511/results_random_run3.txt
[Run 3] Running MACO with generated instance 
  File "C:\Users\pcobr\Downloads\MACO\maco v2\macov6no-2-22-02-2025.py", line 500
    --- START OF FILE macov5no-22-02-2025.py ---
                                  ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
 
